src/test/deca/syntax/valid/class_extension.deca
class A extends B {
int x;
}