src/test/deca/syntax/invalid/test_synt11.deca
//Resultat:
//      Erreur syntaxique : ( de plus dans la ligne 5
class A {
int x;
}
class B extends A {
float x()({
}
}
